# CIVA_GUI

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  cairo_surfaces.h  cmake_install.cmake  compile_commands.json  display_functions.cpp  display_functions.h  gui_datarefs.cpp  gui_datarefs.h  gui_functions.cpp  gui_functions.h  gui_structs.h  gui_variables.h  main.cpp  main.h  source_includes.h
.clangd/index/: XPLMDataAccess.h.19B53B8AFDA3F0BB.idx  XPLMDefs.h.A9B5663FB38D5B4A.idx  XPLMDefs.h.FFE75FBE08A29C4A.idx  XPLMDisplay.h.B4F9F670B5EF3E8B.idx  XPLMDisplay.h.DC9685D82D1893BA.idx  XPLMGraphics.h.1D5A5750F2C25A0D.idx  XPLMGraphics.h.475167DD1BD580E6.idx  XPLMMenus.h.C36A59E42C5CF227.idx  XPLMMenus.h.F955ABD33421E30D.idx  XPLMPlugin.h.1E5D8CB25ACF5B99.idx  XPLMPlugin.h.8D0DE450A139FCB6.idx  XPLMProcessing.h.666BC9F1EF3B2E58.idx  XPLMProcessing.h.B9D87077A866BDA7.idx  XPLMUtilities.h.2EFFE18D39F0F62E.idx  XPLMUtilities.h.E96AC1F398732683.idx  assert.h.41434943749907B9.idx  assert.h.82CCB38A43D80BD9.idx  cairo-deprecated.h.636A93DDB080B3FF.idx  cairo-deprecated.h.BA60D4E3450D4DA2.idx  cairo-features.h.19F86A6A775FC208.idx  cairo-features.h.5FAAC778EE6C2BEE.idx  cairo-ft.h.5F3B0B260558792D.idx  cairo-ft.h.E1C6A5F71861F02F.idx  cairo-version.h.058817EF65685414.idx  cairo-version.h.2FC0F5961D62F6D5.idx  cairo.h.07BE29B1F6EE2331.idx  cairo.h.B8DD699CA8B4F9FB.idx  cairo_surfaces.h.014FC71563762EF0.idx  cairo_surfaces.h.8DB9161438618795.idx  cmd.h.1A25F0CEF6BD916A.idx  core.h.8BDC0CAB8FD11484.idx  core.h.B6057E9B8144D7B0.idx  datarefs.cpp.856327E9F3D910CD.idx  datarefs.h.7B8F421E0B87C4BC.idx  display_functions.cpp.2E096FAC42B0BC19.idx  display_functions.h.388DBD1E014E60F1.idx  dr.h.ECD26D176BB86440.idx  dr_cmd_reg.h.AC1A941889B5AA00.idx  freetype.h.71650A57ED616C74.idx  freetype.h.ADE4FA814660B8A7.idx  (+68 more)
Fonts/: DSEG7Classic-Italic-1.sfd
output/multi-window-test/Fonts/: Segment7.sfd
output/multi-window-test/lin_x64/: multi-window-test.xpl
